--- a/gyak8_CK90DC/gyak8_CK90DC/gyak8_CK90DC.csproj
+++ b/gyak8_CK90DC/gyak8_CK90DC/gyak8_CK90DC.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstractions\Toy.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Entities\Ball.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -83,8 +86,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entities\Abstractions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
